# test_nebus

./: LICENSE  README.md
app/: Dockerfile  entrypoint.sh  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 6393ad6b3c6b_add_record_level_to_activity_model.py  65da4e19ef42_add_field_params_to_models_.py  f2ab1224090b_initial.py
app/src/: api_key.py  config.py  crud.py  database.py  dependencies.py  load_test_data.py  main.py  models.py  schemas.py
app/src/routers/: buildings.py  organizations.py  web.py
app/src/templates/: activities.html  buildings.html  organizations.html
nebus_compose/: .env.example  docker-compose.local.yaml  docker-compose.yaml  nginx.conf
