[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Georgiy <37848058+SivikGosh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.41"
geoalchemy2 = "^0.17.1"
alembic = "^1.15.2"
shapely = "^2.1.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
